--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       ✅ Otomatik e-posta sistemi<br>
       ✅ 2 gün içinde teslim
     </p>
-    <a class="button" href="https://drive.google.com/file/d/15laPMo_1uUc7_RHrM4KPHk7IVWwC74VS/view" target="_blank">
-      🎥 Demo Videosunu İzleyin
+    <a class="button" href="https://drive.google.com/file/d/1Yu2-GlXZjrNapC9UBDhfPYkxmm7_QWJ0/view?usp=sharing" target="_blank">
+       🎥 Watch the New Demo Video
     </a>
   </div>
 </body>
