--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DentalBoost AI – Müşteri Kazanım Sistemi</title>
+  <title>DentalBoost AI – Patient Acquisition System</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,29 +33,29 @@
       display: inline-block;
       margin-top: 30px;
       padding: 15px 30px;
-      background: #007bff;
+      background: #28a745;
       color: white;
       text-decoration: none;
       font-size: 18px;
       border-radius: 8px;
     }
     a.button:hover {
-      background: #0056b3;
+      background: #1e7e34;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Diş Kliniğiniz İçin 48 Saatte Hazır: AI Destekli Müşteri Kazanma Sistemi</h1>
+    <h1>Ready in 48 Hours: AI-Powered Patient Acquisition System for Your Dental Clinic</h1>
     <p>
-      Artık kampanyalarla zaman kaybetmeyin. ChatGPT + chatbot + e-posta otomasyonuyla günlük randevularınız otomatik aksın.<br><br>
-      ✅ Özel satış metinleri<br>
-      ✅ Chatbot entegrasyonu<br>
-      ✅ Otomatik e-posta sistemi<br>
-      ✅ 2 gün içinde teslim
+      Stop wasting time on ads and complex tools. With ChatGPT, chatbot, and email automation, you get consistent new appointments — automatically.<br><br>
+      ✅ Custom AI-written sales scripts<br>
+      ✅ Chatbot integration for your site or WhatsApp<br>
+      ✅ Automated follow-up emails<br>
+      ✅ Delivered in just 2 days
     </p>
-    <a class="button" href="https://drive.google.com/file/d/1Yu2-GlXZjrNapC9UBDhfPYkxmm7_QWJ0/view?usp=sharing" target="_blank">
-       🎥 Watch the New Demo Video
+    <a class="button" href="https://drive.google.com/uc?export=download&id=1Yu2-GlXZjrNapC9UBDhfPYkxmm7_QWJ0" target="_blank">
+      🎥 Watch the New Demo Video
     </a>
   </div>
 </body>
