--- a/index.html
+++ b/index.html
@@ -3,60 +3,130 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DentalBoost AI – Patient Acquisition System</title>
+  <title>DentalBoost AI – Let AI Fill Your Dental Chairs</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f8f8f8;
       margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    .container {
-      padding: 60px 20px;
-      max-width: 800px;
-      margin: auto;
-      background: #fff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 10px;
-    }
-    h1 {
-      font-size: 32px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f5f8fa;
       color: #333;
     }
-    p {
+    .hero {
+      background: #0d6efd;
+      color: white;
+      padding: 100px 20px 80px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 42px;
+      margin-bottom: 20px;
+    }
+    .hero p {
+      font-size: 20px;
+      margin-bottom: 30px;
+    }
+    .hero a.button {
+      background: #ffc107;
+      color: #000;
+      padding: 15px 30px;
+      font-size: 18px;
+      border-radius: 8px;
+      text-decoration: none;
+    }
+    .section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
+    }
+    .section h2 {
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+    .section p {
       font-size: 18px;
       color: #555;
       line-height: 1.6;
     }
-    a.button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 15px 30px;
-      background: #28a745;
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
-      border-radius: 8px;
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
     }
-    a.button:hover {
-      background: #1e7e34;
+    .feature {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    .video-section {
+      background: #fff;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .video-section iframe {
+      width: 100%;
+      max-width: 720px;
+      height: 405px;
+      border: none;
+      border-radius: 12px;
+    }
+    .cta {
+      padding: 60px 20px;
+      background: #198754;
+      color: white;
+      text-align: center;
+    }
+    .cta a {
+      background: #fff;
+      color: #198754;
+      padding: 14px 28px;
+      border-radius: 6px;
+      font-size: 18px;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Ready in 48 Hours: AI-Powered Patient Acquisition System for Your Dental Clinic</h1>
-    <p>
-      Stop wasting time on ads and complex tools. With ChatGPT, chatbot, and email automation, you get consistent new appointments — automatically.<br><br>
-      ✅ Custom AI-written sales scripts<br>
-      ✅ Chatbot integration for your site or WhatsApp<br>
-      ✅ Automated follow-up emails<br>
-      ✅ Delivered in just 2 days
-    </p>
-    <a class="button" href="https://drive.google.com/uc?export=download&id=1Yu2-GlXZjrNapC9UBDhfPYkxmm7_QWJ0" target="_blank">
-      🎥 Watch the New Demo Video
-    </a>
+
+  <div class="hero">
+    <h1>Let AI Fill Your Dental Chairs in 48 Hours</h1>
+    <p>No ads. No complicated tools. Just a fully automated AI system for your clinic.</p>
+    <a class="button" href="https://calendly.com/anildere-nft/30min" target="_blank">📅 Book a Free 30-Min Call</a>
   </div>
+
+  <div class="section">
+    <h2>Struggling With Low Bookings?</h2>
+    <p>Most dentists waste money on ads that don’t convert. We build a plug & play system that automates patient acquisition for you.</p>
+
+    <div class="features">
+      <div class="feature">
+        <h3>🎯 AI-Powered Sales Scripts</h3>
+        <p>Custom GPT-trained messages that speak your patients' language.</p>
+      </div>
+      <div class="feature">
+        <h3>🤖 Chatbots That Work</h3>
+        <p>Automated chat for your website or WhatsApp – available 24/7.</p>
+      </div>
+      <div class="feature">
+        <h3>📧 Email Follow-ups</h3>
+        <p>We help you stay top-of-mind and bring patients back, automatically.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="video-section">
+    <h2>Watch Demo Video</h2>
+    <iframe src="https://drive.google.com/file/d/1Yu2-GlXZjrNapC9UBDhfPYkxmm7_QWJ0/preview" allow="autoplay"></iframe>
+  </div>
+
+  <div class="cta">
+    <h2>Ready to See Results?</h2>
+    <p>Click below to schedule your free consultation. Let’s grow your clinic together.</p>
+    <br>
+    <a href="https://calendly.com/anildere-nft/30min" target="_blank">🚀 Book Your Free Call Now</a>
+  </div>
+
 </body>
 </html>
